--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /*
 
 #Except the Assets and ProjectSettings folder, as well as the selected Git files.
-!Assets/
-!ProjectSettings/
+!percySimulator2k21/Assets/
+!percySimulator2k21/ProjectSettings/
 !.gitignore
 !.gitattributes
